Update scrapers, config, and notifier; add README and gitignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests
-beautifulsoup4
-lxml
-fake_useragent
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+fake_useragent>=1.4.0
+python-dotenv>=1.0.0
+certifi>=2023.7.22
